--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,9 @@ envlist = py{27,33,34,35}-dj{110,111}-wag{111,112}
 setenv =
     DJANGO_SETTINGS_MODULE=tests.settings
     PYTHONPATH = {toxinidir}:{toxinidir}/omni_blocks
-commands = coverage run --source omni_blocks runtests.py
+commands =
+    coverage run --source omni_blocks runtests.py
+    coverage html
 deps =
     coverage
     dj110: Django>=1.10,<1.11
