Refactored PageChooserTemplateBlock to inherit directly from PageChooserBlock. Bumped version to `0.4.0`

--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,6 @@
 envlist = py{27,33,34,35}-dj{110,111}-wag{111,112}
 
 [testenv]
-#install_command=pip install -e "."
 setenv =
     DJANGO_SETTINGS_MODULE=tests.settings
     PYTHONPATH = {toxinidir}:{toxinidir}/omni_blocks
@@ -11,6 +10,7 @@ commands =
     coverage html
 deps =
     coverage
+    wagtail_factories==0.3.0
     dj110: Django>=1.10,<1.11
     dj111: Django>=1.11,<1.12
     wag111: wagtail>=1.11,<1.12
