--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,7 @@ commands =
     coverage html
 deps =
     coverage
+    mock>=1.0.1
     wagtail_factories==0.3.0
     dj110: Django>=1.10,<1.11
     dj111: Django>=1.11,<1.12
