Added detail to readme. Converted all `.rst` files to `.md`. Dropped support for python 3.4

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,7 @@ tag = True
 [bumpversion:file:omni_blocks/__init__.py]
 
 [metadata]
-description-file = README.rst
+description-file = README.md
 
 [wheel]
 universal = 1
