--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{27,34,35,36}-dj{110,111}-wag{111,112}
+envlist = py36-dj{111,200,210}-wag{210,220,230},py36-flake8
 
 [testenv]
 setenv =
@@ -7,16 +7,32 @@ setenv =
     PYTHONPATH = {toxinidir}:{toxinidir}/omni_blocks
 commands =
     coverage run --source omni_blocks runtests.py
-    coverage html
+    coverage report --show-missing --omit=.tox/*,*/tests/*,
 deps =
     coverage
     mock>=1.0.1
-    wagtail_factories==0.3.0
-    dj110: Django>=1.10,<1.11
+    wagtail_factories==1.1.0
     dj111: Django>=1.11,<1.12
-    wag111: wagtail>=1.11,<1.12
-    wag112: wagtail>=1.12,<1.13
+    dj200: Django>=2.0,<2.1
+    dj210: Django>=2.1,<2.2
+    wag112: wagtail>=2.1,<2.2
+    wag112: wagtail>=2.2,<2.3
+    wag112: wagtail>=2.3,<2.4
 
 [testenv:flake8]
-deps = flake8>=2.2.0
+deps =
+    flake8
+    flake8
+    flake8-colors
+    flake8-debugger
+    flake8-import-order
+    flake8-print
+
 commands = flake8 .
+
+[coverage:report]
+exclude_lines =
+    pragma: no cover
+
+    raise AssertionError
+    raise NotImplementedError
