Use pytest for unit tests

--- a/tox.ini
+++ b/tox.ini
@@ -6,10 +6,12 @@ setenv =
     DJANGO_SETTINGS_MODULE=tests.settings
     PYTHONPATH = {toxinidir}:{toxinidir}/omni_blocks
 commands =
-    coverage run --source omni_blocks runtests.py
-    coverage report --show-missing --omit=.tox/*,*/tests/*,
+    pytest
+     
 deps =
-    coverage
+    pipenv==2018.11.26
+    pytest==4.3.0
+    pytest-django==3.4.8
     mock>=1.0.1
     wagtail_factories==1.1.0
     dj111: Django>=1.11,<1.12
@@ -30,9 +32,3 @@ deps =
 
 commands = flake8 .
 
-[coverage:report]
-exclude_lines =
-    pragma: no cover
-
-    raise AssertionError
-    raise NotImplementedError
