--- a/setup.cfg
+++ b/setup.cfg
@@ -24,8 +24,8 @@ exclude =
     dist
 max-line-length = 89
 
-# [tool:pytest]
-# DJANGO_SETTINGS_MODULE = tests.settings
+[tool:pytest]
+DJANGO_SETTINGS_MODULE = tests.settings
 # -- recommended but optional:
-# python_files = tests.py test_*.py *_tests.py
+python_files = tests.py test_*.py *_tests.py
 # addopts = --reuse-db
