Use coverage to run pytest in tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -6,9 +6,10 @@ setenv =
     DJANGO_SETTINGS_MODULE=tests.settings
     PYTHONPATH = {toxinidir}:{toxinidir}/omni_blocks
 commands =
-    pytest
-     
+    coverage run --source='.' -m pytest --reuse-db
+    coverage report --show-missing --omit=*migrations*,*tests*,.tox*
 deps =
+    coverage==4.5.2
     pipenv==2018.11.26
     pytest==4.3.0
     pytest-django==3.4.8
