--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py36-dj{111,200,210}-wag{210,220,230},py36-flake8
+envlist = py{35,36,37}-dj{111,200,210}-wag{210,220,230},py36-flake8
 
 [testenv]
 setenv =
