--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,12 @@ language: python
 python:
   - "3.5"
   - "3.6"
-  - "3.7"
+
+matrix:
+  include:
+    - python: 3.7
+      dist: xenial
+      sudo: true
 
 matrix:
   fast_finish: true
