Add pipenv check to tox

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{35,36,37}-dj{111,200,210}-wag{210,220,230},py36-flake8
+envlist = py{35,36,37}-dj{111,200,210}-wag{210,220,230},py36-flake8,pipenvcheck
 
 [testenv]
 setenv =
@@ -32,4 +32,10 @@ deps =
     flake8-print
 
 commands = flake8 .
+
+[testenv:pipenvcheck]
+deps =
+    pipenv==2018.11.26
+
+commands = pipenv check
 
